# pgbrowsr

./: .clang-format  .gitignore  README.md  config.yaml
c_version/: .clang-format  Makefile
c_version/src/: db.c  db.h  db_config.c  db_config.h  schema-row.h  ui.c  ui.h
rust_version/: Cargo.toml
rust_version/src/: db.rs  main.rs  state.rs  ui.rs
src/: db.c  db.h  generic-row.c  generic-row.h  main.c  schema-row.c  ui.c
