[package]
name = "pg_browser"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros"
] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }